Add time interval checking

--- a/README
+++ b/README
@@ -1,13 +1,15 @@
-aptitude install ruby2.0 ruby-sinatra ruby-sinatra-contrib
+# Install required packages:
+$ aptitude install ruby2.0 ruby-sinatra ruby-sinatra-contrib
 
+# Create configuration:
 $ cp site-protect.conf.rb.sample site-protect.conf.rb
 
 edit site-protect.conf.rb;
 
-Add "auth http://localhost:1555" info flussonic.conf;
-
-# Run site:
-$ ./site-protect.rb -p 8888 -o 0.0.0.0
+Add "auth http://localhost:1555;" into flussonic.conf;
 
 Run auth backend:
 $ ./site-protect-auth.rb -p 1555
+
+# Run site:
+$ ./site-protect.rb -p 8888 -o 0.0.0.0
